gateway/argocd-route.yaml
apiVersion: gateway.networking.k8s.io/v1beta1
kind: HTTPRoute
metadata:
  name: argocd-route
  namespace: argocd
spec:
  parentRefs:
    - name: http-gateway
      namespace: default
    - name: tailscale-gateway
      namespace: tailscale
  hostnames:
    - argocd.jarvis-home.dev
  rules:
    - matches:
        - path:
            type: PathPrefix
            value: /
      backendRefs:
        - name: argocd-server
          port: 80
